--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - CUDA=6.5
 
 before_install:
+  # install cuda
   - travis_retry wget http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1204/x86_64/cuda-repo-ubuntu1204_${CUDA}-14_amd64.deb
   - travis_retry sudo dpkg -i cuda-repo-ubuntu1204_${CUDA}-14_amd64.deb
   - travis_retry sudo apt-get update -qq
@@ -18,15 +19,24 @@ before_install:
   - export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
   - export PATH=${CUDA_HOME}/bin:${PATH}
   - nvcc --version
+  # use conda for quicker numpy installation
+  - travis_retry wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
 
 install:
   - python setup.py install
-  - pip install nose flake8 hacking
-  - git clone --recursive http://git.tiker.net/trees/pycuda.git
-  - cd pycuda
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy nose
+  - pip install flake8 hacking
+  - travis_retry wget --no-check-certificate https://pypi.python.org/packages/source/p/pycuda/pycuda-2014.1.tar.gz
+  - tar xvfz pycuda-2014.1.tar.gz
+  - cd pycuda-2014.1
   - sudo python configure.py --cuda-root=${CUDA_HOME}
   - make -j 4
   - sudo env PATH=$PATH python setup.py install
+  - cd ~
   - pip install scikits.cuda Mako six
 
 script:
