--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,12 @@ before_install:
   - conda update --yes conda
 
 install:
+  # unable to use conda?
+  - travis_retry sudo apt-get install python-numpy
   # create virtual env
-  - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
-  - export PATH=$HOME/py/bin:$PATH
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy nose
+  # - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
+  # - export PATH=$HOME/py/bin:$PATH
+  # - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy nose
   - pip install flake8 hacking
   # pycuda installation
   - travis_retry wget --no-check-certificate https://pypi.python.org/packages/source/p/pycuda/pycuda-2014.1.tar.gz
