--- a/.travis.yml
+++ b/.travis.yml
@@ -19,19 +19,21 @@ before_install:
   - export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
   - export PATH=${CUDA_HOME}/bin:${PATH}
   - nvcc --version
+  - travis_retry sudo apt-get nvidia-331-updates
 
 install:
   # unable to use conda?
   - travis_retry sudo apt-get install python-numpy
+  - travis_retry sudo apt-get python-pycuda 
   - pip install flake8 hacking
   # pycuda installation
-  - travis_retry wget --no-check-certificate https://pypi.python.org/packages/source/p/pycuda/pycuda-2014.1.tar.gz
-  - tar xvfz pycuda-2014.1.tar.gz
-  - cd pycuda-2014.1
-  - python configure.py --cuda-root=${CUDA_HOME}
-  - make -j 4
-  - python setup.py install
-  - cd ../
+  # - travis_retry wget --no-check-certificate https://pypi.python.org/packages/source/p/pycuda/pycuda-2014.1.tar.gz
+  # - tar xvfz pycuda-2014.1.tar.gz
+  # - cd pycuda-2014.1
+  # - python configure.py --cuda-root=${CUDA_HOME}
+  # - make -j 4
+  # - python setup.py install
+  # - cd ../
   - pip install scikits.cuda Mako six
   - python setup.py install
 
